--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -15,27 +15,30 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud">
         <h1>I'm Hrishikesh</h1>
-        <p>a <span class="pro">pro</span>grammer</p>
+        <h2>a <span class="pro">pro</span>grammer</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-        <img src="images/mountain.png" alt="cloud">
+        <img class="mountain"src="https://web.archive.org/web/20180819202235/http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountain">
+        
     </div>
     
     <div class="middle-container">
         <div class="profile">
           <img class="profile-pic"src="images/1625715679808.jpeg" alt="me">
+          <div class="profile-text">
           <h2>Hello.</h2>
           <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          </div>
         </div>
         <hr>
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="profile-pic"src="images/1625715679808.jpeg" alt="me">
+            <img class="code-img"src="images/1625715679808.jpeg" alt="me">
             <h3>Lorem & Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
           </div>
           <div class="skill-row">
-            <img class="profile-pic"src="images/1625715679808.jpeg" alt="me">
+            <img class="learn-img"src="images/1625715679808.jpeg" alt="me">
             <h3>Lorem Ipsum Dolor</h3>
             <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
@@ -55,7 +58,7 @@
         <a class="footer-link" href="https://github.com/hrishi508">GitHub</a>
         <!-- <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a> -->
-        <p>© Hrishikesh Kusneniwar.</p>
+        <p class="copyright">© Hrishikesh Kusneniwar.</p>
       </div>
 </body>
 </html>
